--- a/databinging/webapp/i18n/i18n.properties
+++ b/databinging/webapp/i18n/i18n.properties
@@ -3,7 +3,22 @@ firstName=First Name
 lastName=Last Name
 enabled=Enabled
 address=Address
+salesToDate=Sales to Date
+panel3HeaderText=Aggregation Binding
+panel4HeaderText=Product Details
  
 # Screen titles
 panel1HeaderText=Data Binding Basics 
 panel2HeaderText=Adress Details
+# Product list
+productListTitle=Product List
+stockValue=Current Stock Value
+
+# Product Details
+ProductID=Product ID
+ProductName=Product Name
+QuantityPerUnit=Quantity per Unit
+UnitPrice=Unit Price
+UnitsInStock=Number of Units in Stock
+Discontinued=Discontinued
+outOfStock=Out of Stock
