--- a/NavigationAndRouting/webapp/i18n/i18n.properties
+++ b/NavigationAndRouting/webapp/i18n/i18n.properties
@@ -20,3 +20,19 @@ City=City
 PostalCode=Postal Code
 PhoneHome=Phone (Home)
 Country=Country
+ResumeOf=Resume of
+Info=Info
+Projects=Projects
+Hobbies=Hobbies
+Notes=Notes
+FlipToResume=Flip to Resume
+FlipToResume.tooltip=See the resume of this employee
+EmployeeOverview=Employee Overview
+ShowEmployeeOverview=Show Employee Overview
+
+EmployeeOverviewTop=Employee Overview Top
+
+Region=Region
+EmployeeID=Employee ID
+Phone=Phone
+Employees=Employees
