--- a/WorklistApp/webapp/i18n/i18n.properties
+++ b/WorklistApp/webapp/i18n/i18n.properties
@@ -3,6 +3,17 @@
 #Application name
 appTitle=Manage Products
 
+#XTIT: The title of the column containing Supplier name
+TableSupplierColumnTitle=Supplier
+
+#XTIT: The title of the column containing Price
+TablePriceColumnTitle=Price
+
+#XTIT: The title of the column containing Ordered Units
+TableUnitsOrderedColumnTitle=Units Ordered
+
+#XTIT: The title of the column containing Units in Stock
+TableUnitsInStockColumnTitle=Units in Stock
 #Application description
 appDescription=My Manage Products App
 
@@ -34,10 +45,66 @@ tableNoDataText=No products are currently available
 #text for link in 'not found' pages
 backToWorklist=Show Manage Products
 
+#XTIT: The title of the products quick filter
+WorklistFilterProductsAll=Products
+
+#XTIT: The title of the out of stock products filter
+WorklistFilterOutOfStock=Out of Stock
+
+#XTIT: The title of the low stock products filter
+WorklistFilterShortage=Shortage
+
+#XTIT: The title of the products in stock filter
+WorklistFilterInStock=Plenty in Stock
+
+#text of the button for Products reordering
+TableProductsReorder=Order
+
+#text for the button for Products unlisting
+TablePorductsUnlist=Remove
+
+#Text for no product selected
+TableNoProductsSelected=No product selected
+
+#Product successfully deleted
+StockRemovedSuccessMsg=Product removed
+
+#Product successfully updated
+StockUpdatedSuccessMsg=Product stock level updated
+
+TableSelectProduct=Please select products
+
 #~~~ Object View ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 #Object view title
 objectTitle=Products
+
+#Price per unit text
+ObjectPriceTitle=Price
+
+#Discontinued text
+ObjectDiscontinuedStatusText=Discontinued
+
+#Supplier tab title
+ObjectSupplierTabTitle=Supplier Info
+
+#Supplier company name
+ObjectSupplierName=Name
+
+#Supplier contact person name
+ObjectSupplierContact=Contact
+
+#Supplier contact address
+ObjectSupplierAddress=Address
+
+#Supplier zip code
+ObjectSupplierZipcode=ZIP Code
+
+#Supplier city name
+ObjectSupplierCity=City
+
+#Supplier country
+ObjectSupplierCountry=Country
 
 #~~~ Footer Options ~~~~~~~~~~~~~~~~~~~~~~~
 
